# tosic-lang

./: Cargo.toml  README.md  test.lox
evaluator/: Cargo.toml
evaluator/src/: environment.rs  lib.rs
lexer/: Cargo.toml
lexer/src/: error.rs  lib.rs
parser/: Cargo.toml
parser/src/: error.rs  lib.rs
src/: error.rs  evaluator.rs  lexer.rs  main.rs  parser.rs  test.rs  token.rs  tokenizer.rs  value.rs
statement/: Cargo.toml
statement/src/: error.rs  lib.rs  traits.rs
test/: big.rs
tokens/: Cargo.toml
