[workspace]
members = ['.', "lexer", "parser", "statement", 'tokens']

[workspace.dependencies]
anyhow = "1.0.68"
bytes = "1.3.0"
thiserror = "1.0.38"
tokens = { path = "tokens" }
lexer = { path = "lexer" }
parser = { path = "parser" }
statement = { path = "statement" }

[package]
name = "codecrafters-interpreter"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"
rust-version = "1.80"

[dependencies]
anyhow = { workspace = true}
bytes = { workspace = true }
clap = { version = "4.5.17", features = ["derive", "help", "suggestions", "wrap_help", "color"] }
thiserror = { workspace = true }
tokens = { workspace = true }
lexer = { workspace = true }
parser = { workspace = true }
statement = { workspace = true }
